# gitb

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: auto-format.yml  release.yml
scoop/: gitb.json
src/: config.rs  main.rs
src/commands/: branch.rs  checkout.rs  commit.rs  create.rs  diff.rs  doctor.rs  group.rs  init.rs  log.rs  rebase.rs  stash.rs  status.rs  sync.rs
src/core/: discovery.rs  git.rs  output.rs
